# tensorflow_lite

./: .gitignore  README.md
android/: local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/tensorflow/demo/: DetectorActivity.java  TFLiteObjectDetectionAPIModel.java  TFLiteObjectDetectionAPIModel2.java
android/gradle/wrapper/: gradle-wrapper.properties
scripts/: convert_to_lite_new.sh  convert_to_lite_old.sh  eval_tflite.py  eval_tflite.sh  eval_tflite_.py  object_detection_new.py  object_detection_old.py
